--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,29 +1,38 @@
-body {
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 5%;
+.App {
+  text-align: center;
 }
 
-#main {
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 1rem;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-h1 {
-    text-align: center;
-    font-size: xx-large;
-    margin: 1rem;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
-section.buttons {
-    display: flex;
-    gap: .5rem;
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-section.lap-section {
-    text-align: center;
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
